--- a/templates/debian.list.j2
+++ b/templates/debian.list.j2
@@ -3,9 +3,12 @@ deb [trusted=yes] https://aws.unified-repo.vyos.net/vyos-crux-{{ vyos_version }}
 deb [trusted=yes] https://aws.unified-repo.vyos.net/vyos-crux-{{ vyos_version }}/vyos crux main
 deb [trusted=yes] http://aws.deb.vyos.io/extended-lts jessie main contrib non-free
 deb [trusted=yes] https://aws.unified-repo.vyos.net/debian-crux-{{ vyos_version }} jessie main
-{% elif vyos_version | regex_search('(^1\.3)') %}
+{% elif vyos_version | regex_search('^(1\.3)') %}
 deb [trusted=yes] https://aws.unified-repo.vyos.net/vyos-equuleus-{{ vyos_version }} equuleus main
 deb [trusted=yes] https://aws.unified-repo.vyos.net/debian-equuleus-{{ vyos_version }} buster main
+{% elif vyos_version | regex_search('^(1\.4)') %}
+deb [trusted=yes] https://aws.unified-repo.vyos.net/vyos-sagitta-{{ vyos_version }} sagitta main
+deb [trusted=yes] https://aws.unified-repo.vyos.net/debian-sagitta-{{ vyos_version }} bookworm main
 {% else %}
 deb http://deb.debian.org/debian bookworm main contrib non-free
 deb http://deb.debian.org/debian bookworm-updates main contrib non-free
